--- a/src/components/invoice-header/invoice-header.css
+++ b/src/components/invoice-header/invoice-header.css
@@ -2,6 +2,11 @@
     display: flex;
     justify-content: space-between;
     color: #fff;
+    position: fixed;
+    width: inherit;
+    background-color: #141625;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
 .invoices-titles p{
