feat: add invoice form interface

--- a/src/components/invoice-header/invoice-header.css
+++ b/src/components/invoice-header/invoice-header.css
@@ -41,7 +41,7 @@
     color: #fff;
 }
 
-.new-invoice-button a ion-icon{
+.new-invoice-button a i{
     background-color: #fff;
     border-radius: 50%;
     padding: 0.5em;
