--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -105,6 +105,15 @@ body {
 .elements-container{
   grid-column: 9 / 101;
 }
+
+.popup-form-container{
+  height: 100%;
+  z-index: 99;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+}
+
 .timeline{
   display: flex;
   justify-content: center;
@@ -116,3 +125,52 @@ body {
   padding-bottom: 1em;
 }
 
+
+/* test  */
+
+.un{
+  width: 0 !important;
+  padding: 0 !important;
+}
+
+.un_inf{
+  width: 0 !important;
+  padding: 0 !important;
+}
+
+.sidebar {
+  height: 100%;
+  width: 700px;
+  position: fixed;
+  z-index: 1;
+  background-color: #141625;
+  border-radius: 0 20px 20px 0;
+  transition: 0.5s;
+  padding: 3em;
+  color: white;
+
+}
+
+.form-container{
+  padding-right: 2em;
+  overflow-y: scroll;
+  z-index: 2;
+  height: 100%;
+}
+
+.form-container::-webkit-scrollbar-thumb {
+  background: #1e213b !important;
+}
+
+.form-container::-webkit-scrollbar-track {
+  background: #141625 !important;
+}
+
+.sidebar p {
+  padding: 0;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
