--- a/src/components/invoice-actions/invoice-actions.css
+++ b/src/components/invoice-actions/invoice-actions.css
@@ -43,3 +43,30 @@
     display: flex;
     gap: 1em;
 }
+
+.button-actions button,
+ .form-actions button{
+    padding: 1em 2em;
+    border-radius: 40px;
+    border: none;
+    font-weight: 600;
+    color: #fff;
+}
+
+.button-actions button:hover,
+.form-actions button:hover{
+    cursor: pointer;
+    
+}
+
+.btn-red{
+    background-color: #ED565A;
+}
+
+.btn-violet{
+    background-color: #7b5df9;
+}
+
+.btn-white{
+    background-color: rgba(255, 255, 255, 0.1)
+}
