config: tailwind configurations

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 *{
   padding: 0;
@@ -9,6 +12,11 @@
 
 body {
   background-color: #141625;
+}
+
+.login{
+  background-color: #7b5df9;
+  height: 100vh;
 }
 
 ::-webkit-scrollbar {
@@ -173,4 +181,10 @@ body {
   color: #818181;
   display: block;
   transition: 0.3s;
+}
+
+/* medias querry */
+
+@media screen and(max-width: 768px) {
+  
 }
