--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.conic-gradient-bg {
+  @apply bg-[conic-gradient(#9278fd_90deg,_#141625_0deg)];
+}
+
 *{
   padding: 0;
   margin: 0;
@@ -14,9 +18,27 @@ body {
   background-color: #141625;
 }
 
-.login{
-  background-color: #7b5df9;
-  height: 100vh;
+.gradient{
+  flex-direction: column;
+}
+
+.gradient h1{
+  font-size: 1.2em;
+  line-height: 1em;
+}
+
+.login-links a:hover{
+  color: #7b5df9;
+  text-decoration: underline;
+}
+
+.svg-icon{
+  width: 1em; 
+  height: 1em;
+  vertical-align: middle;
+  fill: red;
+  overflow: hidden;
+  font-weight: 900;
 }
 
 ::-webkit-scrollbar {
@@ -37,13 +59,17 @@ body {
   display: grid;
   grid-template-columns: repeat(100, 1fr);
   height: 100vh;
-
 }
 
 .sidebar-menu{
-  grid-column: 1 / 9;
+  grid-column: 1 / 18;
   overflow: hidden;
   position: relative;
+  /* en travail */
+
+  background-color: #1e213b;
+  border-right: 3px solid #383b54;
+
 }
 
 .menu{
@@ -57,6 +83,7 @@ body {
   position: fixed;
   width: 123px;
   overflow: hidden;
+  /* color: #dedddd; */
 }
 
 .container-logo{
@@ -111,7 +138,7 @@ body {
 
 
 .elements-container{
-  grid-column: 9 / 101;
+  grid-column: 18 / 101;
 }
 
 .popup-form-container{
