feat: data table integration

--- a/src/components/invoice/invoice.css
+++ b/src/components/invoice/invoice.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 1em;
+    color: #07cc9e;
 }
 
 .invoice-container ul li{
