--- a/src/components/price-detail/price-detail.css
+++ b/src/components/price-detail/price-detail.css
@@ -14,8 +14,8 @@
     gap: 1em;
     justify-content: space-between;
     margin-top: 1em;
-    height: 100px;
-    overflow-y: scroll;
+    /* height: 100px; */
+    /* overflow-y: scroll; */
 }
 
 .total{
