refactor: company card refactoring

--- a/src/App.css
+++ b/src/App.css
@@ -3,221 +3,22 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .conic{
-  color: #e8e9f3;
-} */
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    height: 3px;
+  }
 
-/* .conic-gradient-bg {
-  @apply bg-[conic-gradient(#9278fd_90deg,_#141625_0deg)];
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 6px;
+    background: #CFCFCF;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: #969696;
+    border-radius: 6px;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #a995fa;
+  }
 }
-
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-body {
-  background-color: #141625;
-}
-
-.gradient{
-  flex-direction: column;
-}
-
-.gradient h1{
-  font-size: 1.2em;
-  line-height: 1em;
-}
-
-.login-links a:hover{
-  color: #7b5df9;
-  text-decoration: underline;
-}
-
-.svg-icon{
-  width: 1em; 
-  height: 1em;
-  vertical-align: middle;
-  fill: red;
-  overflow: hidden;
-  font-weight: 900;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #1e213b; 
-  border-radius: 6px;
-}
-
-::-webkit-scrollbar-track {
-  background: lightgray;
-  border-radius: 6px;
-}
-
-.main-container{
-  display: grid;
-  grid-template-columns: repeat(100, 1fr);
-  height: 100%;
-}
-
-.sidebar-menu{
-  grid-column: 1 / 18;
-  overflow: hidden;
-  position: relative;
-  height: 100%;
-  /* en travail 
-
-  background-color: #1e213b;
-  border-right: 3px solid #383b54;
-
-}
-
-.menu{
-  height: 100%;
-  border-radius: 0 20px 20px 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  padding-bottom: 2em;
-  background-color: #1e213b;
-  position: fixed;
-  width: 123px;
-  overflow: hidden;
-  /* color: #dedddd; 
-}
-
-.container-logo{
-  background-color: #7b5df9;
-  border-radius: 0 0 20px 0;
-  height: 130px;
-  display: flex;
-  align-items: end;
-  position: relative;
-}
-
-.banner{
-  height: 50%;
-  background-color: #9278fd;
-  width: 100%;
-  border-radius: 20px 0 20px 0;
-}
-
-.logo{
-  width: 70px;
-  height: 70px;
-  background-color: #fff;
-  border-radius: 50%;
-  position: absolute;
-  top: 20%;
-  z-index: 99;
-  left: 20%;
-}
-
-.profile-container{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.mode{
-  padding-bottom: 1em;
-  border-bottom: 3px solid #333651;
-  width: 100%;
-  text-align: center;
-}
-
-.icon{
-  font-size: 2.3em;
-  color: #8588bd;
-}
-
-.profile-container img{
-  width: 4em;
-  padding-top: 1.5em;
-}
-
-
-.elements-container{
-  grid-column: 18 / 101;
-  height: 100%;
-}
-
-.popup-form-container{
-  height: 100%;
-  z-index: 99;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.6);
-  width: 100%;
-}
-
-.timeline{
-  display: flex;
-  justify-content: center;
-}
-
-.container{
-  width: 850px;
-  position: relative;
-  padding-bottom: 1em;
-}
-
-
-/* test  
-
-.un{
-  width: 0 !important;
-  padding: 0 !important;
-}
-
-.un_inf{
-  width: 0 !important;
-  padding: 0 !important;
-}
-
-.sidebar {
-  height: 100%;
-  width: 700px;
-  position: fixed;
-  z-index: 1;
-  background-color: #141625;
-  border-radius: 0 20px 20px 0;
-  transition: 0.5s;
-  padding: 3em;
-  color: white;
-
-}
-
-.form-container{
-  padding-right: 2em;
-  overflow-y: scroll;
-  z-index: 2;
-  height: 100%;
-}
-
-.form-container::-webkit-scrollbar-thumb {
-  background: #1e213b !important;
-}
-
-.form-container::-webkit-scrollbar-track {
-  background: #141625 !important;
-}
-
-.sidebar p {
-  padding: 0;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-/* medias querry 
-
-@media screen and(max-width: 768px) {
-  
-} */
